<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blank_color"
    android:orientation="vertical" >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_blank_color">
        <include layout="@layout/common_title_text"/>
        <LinearLayout
            android:id="@+id/abc_linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/abc_top"
                android:paddingTop="18sp"
                android:layout_marginLeft="15dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TextView
                    android:id="@+id/abc_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/abc_name"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="45dp"
                    android:textSize="15sp"
                    android:textColor="@color/arp_text1"/>
                <TextView
                    android:id="@+id/abc_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/abc_name_hint"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@id/abc_tv1"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:textColorHint="@color/hint_text_gray"
                    android:textColor="@color/arp_text1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/abc_name"
                    android:layout_marginTop="0dp"
                    android:background="@color/aser_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TextView
                    android:id="@+id/abc_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/abc_card_number"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="45dp"
                    android:textSize="15sp"
                    android:textColor="@color/arp_text1"/>
                <EditText
                    android:id="@+id/abc_bank_number"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/abc_card_number_hint"
                    android:background="@null"
                    android:inputType="number"
                    android:layout_toRightOf="@id/abc_tv2"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:textColorHint="@color/hint_text_gray"
                    android:textColor="@color/arp_text1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/abc_bank_number"
                    android:layout_marginTop="0dp"
                    android:background="@color/aser_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TextView
                    android:id="@+id/abc_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/abc_bank_name"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="45dp"
                    android:textSize="15sp"
                    android:textColor="@color/arp_text1"/>
                <TextView
                    android:id="@+id/abc_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/abc_bank_name_hint"
                    android:background="@null"
                    android:layout_toRightOf="@id/abc_tv3"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/hint_text_gray"
                    android:textColor="@color/arp_text1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/abc_bank_name"
                    android:layout_marginTop="0dp"
                    android:background="@color/aser_divider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/aser_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/abc_img_hint"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="45dp"
                    android:textSize="15sp"
                    android:textColor="@color/arp_text1"/>
                <TextView
                    android:id="@+id/abc_select_province"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abc_select_province"
                    android:layout_toRightOf="@id/aser_tv3"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/arp_text1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/activity_setting_item_bg"/>
                <TextView
                    android:id="@+id/abc_select_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abc_select_city"
                    android:layout_toRightOf="@id/abc_select_province"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/arp_text1"
                    android:layout_marginLeft="20dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/activity_setting_item_bg"/>
                <TextView
                    android:id="@+id/abc_select_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abc_select_area"
                    android:layout_toRightOf="@id/abc_select_city"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/arp_text1"
                    android:layout_marginLeft="20dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/activity_setting_item_bg"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/abc_sub_bank_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/abc_sub_name_hint"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="135dp"
                    android:textColorHint="@color/hint_text_gray"
                    android:textColor="@color/arp_text1"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/aser3_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="上传银行卡"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/arp_text1"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    >
                    <FrameLayout
                        android:layout_width="187dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/aser_round_rect_border">
                        <ImageView
                            android:id="@+id/frame_image1"
                            android:layout_width="187dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/earnings_bank_card"/>
                        <ImageView
                            android:id="@+id/frame_image2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/earnings_add"/>
                        <ImageView
                            android:id="@+id/abc_bank_img"
                            android:layout_width="187dp"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"/>
                    </FrameLayout>
                </RelativeLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abc_bottom"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/textView3"
                android:textColor="@color/tab_line_color"/>
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="确定"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/bg_color"
                android:textSize="16sp"
                android:background="@drawable/bg_login_style"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
