<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pay_panel_bg">

    <LinearLayout
        android:id="@+id/pay_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_above="@+id/keyboard"
        android:background="@drawable/dialog_round_rect_bg"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/pay_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ae_close"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"/>
            <TextView
                android:id="@+id/pay_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/pay_title"
                android:textColor="#2b2b2b"
                android:textSize="20sp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/dialog_personal_divider" />
        <TextView
            android:id="@+id/exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/pay_exchange"
            android:textColor="#2b2b2b"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_gravity="center_horizontal"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/ip_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ae_money_sign"
                android:layout_alignParentLeft="true"
                android:textColor="#2b2b2b"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/pay_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="20.00"
                android:textColor="#2b2b2b"
                android:textSize="25sp"
                android:layout_toRightOf="@id/ip_sign"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/round_rect_border"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">
            <TextView
                android:id="@+id/pay_box1"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />
            <TextView
                android:id="@+id/pay_box2"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />
            <TextView
                android:id="@+id/pay_box3"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />
            <TextView
                android:id="@+id/pay_box4"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />
            <TextView
                android:id="@+id/pay_box5"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/divider" />
            <TextView
                android:id="@+id/pay_box6"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/pay_keyboard_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/pay_keyboard_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/pay_keyboard_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/pay_keyboard_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="4"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/pay_keyboard_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="5"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/pay_keyboard_sex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="6"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/pay_keyboard_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="7"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/pay_keyboard_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="8"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/pay_keyboard_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="9"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/pay_keyboard_space"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/as_divider"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/pay_keyboard_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#2b2b2b"
                android:background="@drawable/activity_setting_item_bg"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/divider"/>
            <RelativeLayout
                android:id="@+id/pay_keyboard_del"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/activity_setting_item_bg">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ae_close"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>